# moodle-cli

./: Justfile  README.md  activity.typ  c4l-util.typ  c4l.typ  generico.typ  htmlx.typ  moodle.typ  pyproject.toml  util.typ
content/: Justfile
content-md/: folder.yaml  resource.yaml
content-typ/: activity.typ  moodle.typ
example/: Justfile  changes.txt  list-md.yaml  list-typ.yaml
example/content-md/: activity.md  assign.yaml  label.yaml  page.yaml  resource.yaml  section.yaml
example/content-typ/: activity.typ  code.typ  moodle.typ
scripts/: main.py  moodle.py
src/mdl/: __init__.py  cli.py  course.py  moodle.py  typst.py
